getTaskByID() transfer to SQL
